--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Apaperia</title>
+    <link rel="icon" type="image/png" href="img/icon.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -20,30 +21,31 @@
     <link rel="stylesheet" href="css/institucional.css">
     <link rel ="stylesheet" href="css/rodape.css">
     
-    <script src='main.js'></script>
+ 
 </head>
 <body>
+    <script src='main.js'></script>
     <header class="cabecalho container">
         <img class="cabecalho__logo" src="img/logo-apeperia.svg" alt="Logo da Apeperia">
         <nav class="cabecalho__navegacao">
             <ul>
-                <li class="cabecalho__link"><a href="#">Sobre</a></li>
-                <li class="cabecalho__link"><a href="#">Planos</a></li>
-                <li class="cabecalho__link"><a href="#">Blog</a></li>
-                <li class="cabecalho__link"><a href="#">Destaques</a></li>
-                <li class="cabecalho__link"><a href="#">Institucional</a></li>
-                <li class="cabecalho__link"><a href="#">Contato</a></li>
+                <li class="cabecalho__link"><a href='#sobre'>Sobre</a></li>
+                <li class="cabecalho__link"><a href='#planos'>Planos</a></li>
+                <li class="cabecalho__link"><a href='#diferenciais'>Blog</a></li>
+                <li class="cabecalho__link"><a href='#destaques'>Destaques</a></li>
+                <li class="cabecalho__link"><a href='#institucional'>Institucional</a></li>
+                <li class="cabecalho__link"><a href='#contato'>Contato</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="chamada container">
+        <section class="chamada container" id="destaques" >
             <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
             <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
-            <a class="chamada__botao botao" href="#">Conheça os planos</a>
+            <a class="chamada__botao botao" href="#planos">Conheça os planos</a>
         </section>
-        <section class="destaques container">
+        <section class="destaques container" id="diferenciais">
             <h2 class="destaques__titulo">Destaques</h2>
             <a href="#">
                 <figure class="destaques__painel">
@@ -74,7 +76,7 @@
                 </li>
             </ul>
         </section>
-        <section class="sobre container">
+        <section class="sobre container" id="sobre">
             <div class="sobre__conteudo">
                 <h2 class="sobre__titulo">Sobre</h2>
                 <p class="sobre__texto">Criamos aplicativos personalizados para <strong class="sobre__texto--destaque">todas as pessoas</strong>!</p>
@@ -96,7 +98,7 @@
             <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
 
         </section>
-        <section class="planos container">
+        <section class="planos container" id="planos">
             <h2 class="planos__titulo">Planos</h2>
             <ul class="planos__cartoes">
                 <li class="cartao cartao--start">
@@ -134,28 +136,27 @@
 
             </ul>
         </section>
-    </section>
-    <section class="contato container">
-        <h2 class="contato__titulo">Contato</h2>
-        <p>Entre em contato com a gente</p>
-        <a href="contato.html" class="contato__botao botao">Entre em contato</a>
-    </section>
-    <section class="institucional container">
-        <h2 class="institucional__titulo">Institucional</h2>
-        <div class="institucional__conteudo">
-            <div class="institucional__informacoes">
-                <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
-            <address class="institucional__endereco">
-                Rua Vergueiro, 3185</br>
-                Vila Mariana, São Paulo
-                <article class="institucional__contato">
-                    <p><a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou <a href="mailto:contato@apeperia.com" class="institucional__contato-email">contato@apeperia.com</a></p>
-                </article>
-            </address>
+        <section class="contato container" id="contato">
+            <h2 class="contato__titulo">Contato</h2>
+            <p>Entre em contato com a gente</p>
+            <a href="contato.html" class="contato__botao botao">Entre em contato</a>
+        </section>
+        <section class="institucional container" id="institucional">
+            <h2 class="institucional__titulo">Institucional</h2>
+            <div class="institucional__conteudo">
+                <div class="institucional__informacoes">
+                    <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                <address class="institucional__endereco">
+                    Rua Vergueiro, 3185</br>
+                    Vila Mariana, São Paulo
+                    <article class="institucional__contato">
+                        <p><a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou <a href="mailto:contato@apeperia.com" class="institucional__contato-email">contato@apeperia.com</a></p>
+                    </article>
+                </address>
+                </div>
+                <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
             </div>
-            <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
-        </div>
-    </section>
+        </section>
     </main>
 
     <footer class="rodape container">
@@ -167,15 +168,16 @@
         </ul>
         <nav>
             <ul class="rodape__navegacao">
-                <li class="rodape__link"><a href="#">Sobre</a></li>
-                <li class="rodape__link"><a href="#">Planos</a></li>
-                <li class="rodape__link"><a href="#">Blog</a></li>
-                <li class="rodape__link"><a href="#">Destaques</a></li>
-                <li class="rodape__link"><a href="#">Institucional</a></li>
-                <li class="rodape__link"><a href="#">Contato</a></li>
+                <li class="rodape__link"><a href="#sobre">Sobre</a></li>
+                <li class="rodape__link"><a href="#planos">Planos</a></li>
+                <li class="rodape__link"><a href="#diferenciais">Blog</a></li>
+                <li class="rodape__link"><a href="#destaques">Destaques</a></li>
+                <li class="rodape__link"><a href="#institucional">Institucional</a></li>
+                <li class="rodape__link"><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </footer>
     
 </body>
+
 </html>
